// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn bPIsPe"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO kHyLkk"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO keKtCO"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO jnltdi"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn kaReGy"
      size="small"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO cRvBUz"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO hyWenN"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO hPQXDJ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO kHyLkk"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO kHyLkk"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO keKtCO"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO kHyLkk"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO keKtCO"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO jnltdi"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO kHyLkk"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO jnltdi"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO keKtCO"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO keKtCO"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO jnltdi"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button XS 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO cRvBUz"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO cRvBUz"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO hyWenN"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO cRvBUz"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO hyWenN"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO hPQXDJ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO cRvBUz"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO hPQXDJ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO hyWenN"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-NaKpO hyWenN"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlyluv fhIgZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-NaKpO hPQXDJ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlyluv fhIgZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
